[gd_scene load_steps=13 format=3 uid="uid://bstgicllg5jw4"]

[ext_resource type="PackedScene" uid="uid://dvdg2bxoihq32" path="res://Scenes/card_slot.tscn" id="1_pe22w"]
[ext_resource type="Script" uid="uid://cvvna1si82h41" path="res://scripts/play_space.gd" id="1_yahnq"]
[ext_resource type="PackedScene" uid="uid://bvp2lq0xadoi2" path="res://Scenes/game_manager.tscn" id="2_5lyoa"]
[ext_resource type="PackedScene" uid="uid://dykqpm7wklekq" path="res://Scenes/Cards/Minor_Arcana/Minor_Arcana_Deck.tscn" id="2_i6akn"]
[ext_resource type="PackedScene" uid="uid://cmw07kbi54r1n" path="res://Scenes/Hexas_Hold_Em_Card_Manager.tscn" id="2_osk37"]
[ext_resource type="Script" uid="uid://boin6tr0pb4jm" path="res://scripts/score_manager.gd" id="3_5lyoa"]
[ext_resource type="Script" uid="uid://brcn0uu1w4pk5" path="res://Scenes/Cards/Minor_Arcana/Minor_Arcana_cards.gd" id="4_c2gb4"]
[ext_resource type="Script" uid="uid://dokx0fbek01si" path="res://scripts/card_synchronizer.gd" id="4_l4lkg"]
[ext_resource type="Script" uid="uid://bq8u3qwnf4w16" path="res://scripts/card_spawner.gd" id="6_a7jki"]
[ext_resource type="Script" uid="uid://cilgpbld2ax5j" path="res://scripts/players.gd" id="6_m4s6i"]
[ext_resource type="Script" uid="uid://chwq4d5jfqblg" path="res://scripts/Multiplayer/multiplayer_manager.gd" id="8_5lyoa"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5lyoa"]
properties/0/path = NodePath("card_manager:networked_cards")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="Play_Space" type="Node2D"]
script = ExtResource("1_yahnq")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Shuffle" type="Button" parent="UI"]
layout_mode = 0
offset_left = 372.0
offset_top = 1005.0
offset_right = 448.0
offset_bottom = 1036.0
text = "SHUFFLE"

[node name="clear_minor_arcana" type="Button" parent="UI"]
layout_mode = 0
offset_left = 452.0
offset_top = 1005.0
offset_right = 528.0
offset_bottom = 1036.0
text = "CLEAR"

[node name="Deal_to_players" type="Button" parent="UI"]
layout_mode = 0
offset_left = 372.0
offset_top = 969.0
offset_right = 448.0
offset_bottom = 1000.0
text = "DEAL"

[node name="Reload" type="Button" parent="UI"]
layout_mode = 0
offset_left = 452.0
offset_top = 969.0
offset_right = 528.0
offset_bottom = 1000.0
text = "RELOAD"

[node name="Deal_to_community" type="Button" parent="UI"]
layout_mode = 0
offset_left = 415.0
offset_top = 868.0
offset_right = 491.0
offset_bottom = 899.0
text = "DEAL"

[node name="Deal2" type="Button" parent="UI"]
layout_mode = 0
offset_left = 1834.0
offset_top = 95.0
offset_right = 1910.0
offset_bottom = 126.0
text = "DEAL"

[node name="score_manager" type="Node2D" parent="."]
script = ExtResource("3_5lyoa")

[node name="card_manager" parent="." node_paths=PackedStringArray("Current_Minor_Deck") instance=ExtResource("2_osk37")]
Current_Minor_Deck = NodePath("../Minor_Arcana")

[node name="cards_in_play" type="Node2D" parent="."]
process_priority = 1
script = ExtResource("4_c2gb4")

[node name="card_synchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_5lyoa")
script = ExtResource("4_l4lkg")

[node name="multiplayer__spawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://bqtpu7j6665bn")
spawn_path = NodePath("../Players")
spawn_limit = 4

[node name="Card_Spawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://d4bg2fjkyscq2", "uid://mhajchtk424d", "uid://drsmlrw45phl5", "uid://j2iukh50yewt", "uid://bs6yeipecaa1p", "uid://c8nagbifgm20i", "uid://dhrgq0ogf8xeb", "uid://cqfihcmqt7kt7", "uid://d06wp8q8q2pc5", "uid://bfoks6lvmcscl", "uid://cvj1u7pivusst", "uid://coynxdgqkqdqa", "uid://dofwpfub0oatt", "uid://duj2bqxcyce7v", "uid://ff8vrymvdrgs", "uid://cdoitkgsmfiba", "uid://c3qx0612o88qb", "uid://df5xoqo6s7p0a", "uid://do3but4m0lcg1", "uid://dcgwtpmmv3yse", "uid://cm7oqmx87bvs1", "uid://chpaiyda2qbos", "uid://vw827lfx0ycl", "uid://dl6rprqpihw7w", "uid://b5a6ih0y4ffaq", "uid://x2cixdk12pvi", "uid://bdu1cveobdfns", "uid://dhvqk7maugtk7", "uid://fcb08xwf270c", "uid://5m1tdo0pvpc3", "uid://cp2ed38po2n0", "uid://cmjsspkcfinq0", "uid://bo6hcsssrr2i2", "uid://dn4kh1xpi1ee", "uid://cupx7ebudox6a", "uid://dhou5814tsyis", "uid://db78bd3sall0y", "uid://cku7ub33oekmq", "uid://j1h6sbbvtul3", "uid://c87q0yw1rn2wj", "uid://bt7lijhv2vtje", "uid://duheuggs440vs", "uid://ch4c4stw52sqd", "uid://bsipwvyh2781g", "uid://cv5qe8on007ia", "uid://b6llft0jbigne", "uid://cw1xwdbag2kwx", "uid://dvwdr1xco46iy", "uid://cuomvtluurk11", "uid://ckmmo3gnwc3d3", "uid://d1w8sixdpx7gy", "uid://calb3lej0bc18", "uid://cbtjjiaunwaib", "uid://conthr1petdfj", "uid://dy1id0ccksmyi", "uid://dxofq3gxspclc")
spawn_path = NodePath("../cards_in_play")
script = ExtResource("6_a7jki")

[node name="multiplayer_manager" type="Node2D" parent="."]
script = ExtResource("8_5lyoa")

[node name="game_manager" parent="." instance=ExtResource("2_5lyoa")]
position = Vector2(1513, 120)
rotation = 3.14159

[node name="Minor_Arcana_Community_Slots" type="Node2D" parent="."]
position = Vector2(-523, -216)

[node name="Minor_Arcana_Slot5" parent="Minor_Arcana_Community_Slots" instance=ExtResource("1_pe22w")]
unique_name_in_owner = true
position = Vector2(1300, 648)

[node name="Minor_Arcana_Slot4" parent="Minor_Arcana_Community_Slots" instance=ExtResource("1_pe22w")]
unique_name_in_owner = true
position = Vector2(1139, 648)

[node name="Minor_Arcana_Slot3" parent="Minor_Arcana_Community_Slots" instance=ExtResource("1_pe22w")]
unique_name_in_owner = true
position = Vector2(976, 648)

[node name="Minor_Arcana_Slot2" parent="Minor_Arcana_Community_Slots" instance=ExtResource("1_pe22w")]
unique_name_in_owner = true
position = Vector2(814, 648)

[node name="Minor_Arcana_Slot" parent="Minor_Arcana_Community_Slots" instance=ExtResource("1_pe22w")]
unique_name_in_owner = true
position = Vector2(651, 648)

[node name="Major_arcana_Slots" type="Node2D" parent="."]
position = Vector2(-523, -325)

[node name="Major_Arcana_Slot" parent="Major_arcana_Slots" instance=ExtResource("1_pe22w")]
position = Vector2(651, 438)
Slot_Type = 1

[node name="Major_Arcana_Slot2" parent="Major_arcana_Slots" instance=ExtResource("1_pe22w")]
position = Vector2(814, 438)
Slot_Type = 1

[node name="Major_Arcana_Slot3" parent="Major_arcana_Slots" instance=ExtResource("1_pe22w")]
position = Vector2(976, 438)
Slot_Type = 1

[node name="Major_Arcana_Slot4" parent="Major_arcana_Slots" instance=ExtResource("1_pe22w")]
position = Vector2(1139, 438)
Slot_Type = 1

[node name="Major_Arcana_Slot5" parent="Major_arcana_Slots" instance=ExtResource("1_pe22w")]
position = Vector2(1300, 438)
Slot_Type = 1

[node name="Minor_Arcana" parent="." node_paths=PackedStringArray("discard_pile") instance=ExtResource("2_i6akn")]
position = Vector2(128, 948)
discard_pile = NodePath("../Minor_card_discard_slot")

[node name="Minor_card_deck_Slot" parent="." instance=ExtResource("1_pe22w")]
position = Vector2(128, 953)

[node name="Minor_card_discard_slot" parent="." instance=ExtResource("1_pe22w")]
position = Vector2(291, 953)

[node name="Major_modifier_deck_Slot" parent="." instance=ExtResource("1_pe22w")]
position = Vector2(781, 952)

[node name="Major_modifier_discard_slot" parent="." instance=ExtResource("1_pe22w")]
position = Vector2(616, 953)

[node name="Players" type="Node2D" parent="."]
script = ExtResource("6_m4s6i")

[node name="Player1_location" type="Node2D" parent="Players"]
position = Vector2(1736, 189)

[node name="Player2_location" type="Node2D" parent="Players"]
position = Vector2(1732, 427)

[node name="Player3_location" type="Node2D" parent="Players"]
position = Vector2(1738, 673)

[node name="Player4_location" type="Node2D" parent="Players"]
position = Vector2(1732, 887)

[connection signal="pressed" from="UI/Shuffle" to="card_manager" method="_on_shuffle_button_pressed"]
[connection signal="pressed" from="UI/clear_minor_arcana" to="card_manager" method="_on_clear_minor_arcana_pressed"]
[connection signal="pressed" from="UI/Deal_to_players" to="card_manager" method="_on_deal_to_players_pressed"]
[connection signal="pressed" from="UI/Reload" to="card_manager" method="_on_reload_pressed"]
[connection signal="pressed" from="UI/Deal_to_community" to="card_manager" method="_on_deal_to_community_pressed"]
[connection signal="pressed" from="UI/Deal2" to="card_manager" method="_on_deal_pressed"]

[editable path="Minor_Arcana_Community_Slots/Minor_Arcana_Slot5"]
[editable path="Minor_Arcana_Community_Slots/Minor_Arcana_Slot4"]
[editable path="Minor_Arcana_Community_Slots/Minor_Arcana_Slot3"]
[editable path="Minor_Arcana_Community_Slots/Minor_Arcana_Slot2"]
[editable path="Minor_Arcana_Community_Slots/Minor_Arcana_Slot"]
[editable path="Major_arcana_Slots/Major_Arcana_Slot"]
[editable path="Major_arcana_Slots/Major_Arcana_Slot2"]
[editable path="Major_arcana_Slots/Major_Arcana_Slot3"]
[editable path="Major_arcana_Slots/Major_Arcana_Slot4"]
[editable path="Major_arcana_Slots/Major_Arcana_Slot5"]
[editable path="Minor_Arcana"]
[editable path="Minor_card_deck_Slot"]
[editable path="Minor_card_discard_slot"]
[editable path="Major_modifier_deck_Slot"]
[editable path="Major_modifier_discard_slot"]
